--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk"
       crossorigin="anonymous"
     />
-
+    <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -47,17 +47,16 @@
       <h1 class="launch__text">We are launching <span>soon!</span></h1>
       <p class="subscribe__text">Subscribe and get notified</p>
 
-      <form action="" class="form">
+      <form action="" class="form" id="form">
         <input
           type="text"
           name="email"
           id="email"
           placeholder="Your email address..."
+          class="email__input"
         />
-        <p class="error__message" id="error-message">
-          Please provide a valid email address
-        </p>
-        <button type="submit">Notify Me</button>
+        <p class="error__message" id="error-message"></p>
+        <button type="submit" id="submit-button">Notify Me</button>
       </form>
 
       <img
