Accessibility issues fixed

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
       <h1 class="launch__text">We are launching <span>soon!</span></h1>
       <p class="subscribe__text">Subscribe and get notified</p>
 
-      <form action="" class="form" id="form">
+      <form action="/" class="form" id="form">
         <input
           type="text"
           name="email"
           id="email"
           placeholder="Your email address..."
           class="email__input"
+          aria-label="email"
         />
         <p class="error__message" id="error-message"></p>
         <button type="submit" id="submit-button">Notify Me</button>
