Added Aria Labels and changed logo alt

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="./images/logo.svg" alt="Ping Logo" class="logo" />
+      <img src="./images/logo.svg" class="logo" />
 
       <h1 class="launch__text">We are launching <span>soon!</span></h1>
       <p class="subscribe__text">Subscribe and get notified</p>
@@ -67,9 +67,15 @@
       />
 
       <div class="socials">
-        <a href="#"><i class="fab fa-facebook-f social"></i></a>
-        <a href="#"><i class="fab fa-twitter social"></i></a>
-        <a href="#"><i class="fab fa-instagram social"></i></a>
+        <a href="#" aria-label="Follow us on Facebook"
+          ><i class="fab fa-facebook-f social"></i
+        ></a>
+        <a href="#" aria-label="Follow us on Twitter"
+          ><i class="fab fa-twitter social"></i
+        ></a>
+        <a href="#" aria-label="Follow us on Instagram"
+          ><i class="fab fa-instagram social"></i
+        ></a>
       </div>
 
       <p class="copyright">&copy; Copyright Ping. All rights reserved.</p>
