Added Aria Labels and changed logo alt

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="./images/logo.svg" class="logo" />
+      <img src="./images/logo.svg" class="logo" alt="" />
 
       <h1 class="launch__text">We are launching <span>soon!</span></h1>
       <p class="subscribe__text">Subscribe and get notified</p>
