Added new JS functionalities

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h1 class="launch__text">We are launching <span>soon!</span></h1>
       <p class="subscribe__text">Subscribe and get notified</p>
 
-      <form action="/" class="form" id="form">
+      <form action="#" class="form" id="form" method="POST">
         <input
           type="text"
           name="email"
